@@ -26,6 +26,8 @@ Change log next version
       then().
               statusCode(200).
               body("greeting", equalTo("Greetings John Doe"));
+* Added peek and prettyPeek support to com.jayway.restassured.response.Response which allows you to print the response to system out but continue working with the Response instance afterwards.
+
 
 Change log 1.9.0 (2013-11-25)
 -----------------------------
